[package]
name = "cargo-esp-new"
version = "1.0.0"
edition = "2021"
authors = ["Nearest River river177169@proton.me"]
license = "GPL-2.0-only"
description = "A cargo-new extension for esp8266 chips"
repository = "https://github.com/nearest-river/cargo-esp-new"
keywords = ["esp8266", "embedded", "esp"]
categories = ["esp8266", "embedded", "esp"]

[dependencies]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
debug = false
debug-assertions = false

[profile.dev]
debug = true
